# bit-bot

./: .env.example  Cargo.toml  README.md
src/: lib.rs  main.rs
src/api/bybit/: account.rs  client.rs  http.rs  mod.rs  trade.rs
src/application/: accounts.rs
src/routes/: mod.rs
src/shared/utils/: config.rs  deserializer.rs  mod.rs
src/utils/: config.rs
