[package]
name = "bit_bot"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
serde_json = "1.0"
dotenv = "0.15"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
